--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Hi | sprinkle.io</title>
 </head>
 <body>
-  <p>Hello, I'll be functional soon...</p>
+  <script src="src/app.js"></script>
 </body>
 </html>
