--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Hi | sprinkle.io</title>
+  <link rel="stylesheet" type="text/css" href="src/assets/styles/global.css">
 </head>
 <body>
   <script src="src/app.js"></script>
