--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hi | sprinkle.io</title>
+  <title>Stephen Sprinkle | Hi</title>
   <link rel="stylesheet" type="text/css" href="src/assets/styles/global.css">
 </head>
 <body>
