tmp first release

--- a/index.html
+++ b/index.html
@@ -1,9 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Hi | sprinkle.io</title>
-</head>
-<body>
-  <p>Hello, I'll be functional soon...</p>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Stephen Sprinkle | Hi</title><link rel="stylesheet" type="text/css" href="/global.1bcece15.css"><link rel="stylesheet" href="/app.c3f98524.css"></head><body> <script src="/app.36728d4a.js"></script>
+</body></html>
