--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-21397758-6"></script>
+  <script>
+    // TODO -- add prod conditional
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-21397758-6');
+  </script>
+
   <title>Stephen Sprinkle | Hi</title>
+
   <link rel="stylesheet" type="text/css" href="src/assets/styles/global.css">
 </head>
 <body>
