removed rsync package + updated title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     gtag('config', 'UA-21397758-6');
   </script>
 
-  <title>Stephen Sprinkle | Hi!</title>
+  <title>Stephen Sprinkle | Hello!</title>
 
   <link rel="stylesheet" type="text/css" href="src/assets/styles/global.css">
 </head>
