added cleanup script + scaling viewport improvements to site

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     gtag('config', 'UA-21397758-6');
   </script>
 
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no" />
+
   <title>Stephen Sprinkle | Hello!</title>
 
   <link rel="stylesheet" type="text/css" href="src/assets/styles/global.css">
