--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
     gtag('config', 'UA-21397758-6');
   </script>
+  <script>
+    var captureOutboundLink = function(url) {
+       ga('send', 'event', 'outbound', 'click', url, {
+         'transport': 'beacon',
+         'hitCallback': function(){document.location = url;}
+       });
+    }
+  </script>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no" />
