added framework + build tool to footer and adjusted styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no" />
 
-  <title>Stephen Sprinkle | Hello!</title>
+  <title>Hi! | Stephen Sprinkle</title>
 
   <link rel="stylesheet" type="text/css" href="src/assets/styles/global.css">
 </head>
