cleaned up file org + associated changes required

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
 
   <title>Hi! | Stephen Sprinkle</title>
 
-  <link rel="stylesheet" type="text/css" href="src/assets/styles/global.css">
+  <link rel="stylesheet" type="text/css" href="assets/styles/global.css">
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WLDGFPD"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <script src="src/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
